personalized shasthojoy and added hotjar
add hotjar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Home | Avoc | Awesome Parallax Template</title>
+<title>Home | Shasthojoy Web Platform for Developers</title>
 <!-- DEFAULT META TAGS -->
 
 <!-- FONTS -->
@@ -286,8 +286,8 @@
             </div>
             
             <div class="widget copyright">
-                <p>Copyright &copy; 2014 by Avoc<br>
-                Made with Love by <a href="http://www.spab-rice.com">Spab Rice</a></p>
+                <p>Copyright &copy; 2017 by Enterstudios<br>
+                Made with Care at <a href="http://www.enterstudios.biz">Enter Inventive Studio</a></p>
             </div>
             
             <a id="backtotop" href="#">Back To Top</a>
@@ -307,6 +307,18 @@
 <script type="text/javascript" src="files/js/jquery.owl.carousel.js"></script>
 <script type="text/javascript" src="files/js/jquery.wolf.min.js"></script>
 <script type="text/javascript" src="files/js/script.js"></script>
+<!-- Hotjar Tracking Code for https://dev.shasthojoy.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:704925,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 <!-- SCRIPTS -->
 
 </body>
